<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public $withinTransaction = false;

    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create("task_dependencies", function (Blueprint $table) {
            $table->id();
            $table->foreignId("task_id")->constrained()->onDelete("cascade");
            $table
                ->foreignId("depends_on_id")
                ->constrained("tasks")
                ->onDelete("cascade");

            // Prevent duplicate dependencies
            $table->unique(["task_id", "depends_on_id"]);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists("task_dependencies");
    }
};
