<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public $withinTransaction = false;

    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create("task_attachments", function (Blueprint $table) {
            $table->id();
            $table->foreignId("task_id")->constrained()->onDelete("cascade");
            $table->foreignId("user_id")->constrained()->onDelete("cascade");
            $table->string("file_path");
            $table->string("file_name");
            $table->string("file_type"); // image/png, image/jpeg, etc.
            $table->unsignedBigInteger("file_size");
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists("task_attachments");
    }
};

